--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
 
         <div class="reviews">
           <article class="review">
-            <img src="images/icon-star.svg">
-            <img src="images/icon-star.svg">
-            <img src="images/icon-star.svg">
-            <img src="images/icon-star.svg">
-            <img src="images/icon-star.svg">
+            <img alt="star" src="images/icon-star.svg">
+            <img alt="star" src="images/icon-star.svg">
+            <img alt="star" src="images/icon-star.svg">
+            <img alt="star" src="images/icon-star.svg">
+            <img alt="star" src="images/icon-star.svg">
             <p>
               Rated 5 Stars in Reviews
             </p>
@@ -47,11 +47,11 @@
   
           </article>
           <article class="review">
-            <img src="images/icon-star.svg">
-            <img src="images/icon-star.svg">
-            <img src="images/icon-star.svg">
-            <img src="images/icon-star.svg">
-            <img src="images/icon-star.svg">
+            <img alt="star" src="images/icon-star.svg">
+            <img alt="star" src="images/icon-star.svg">
+            <img alt="star" src="images/icon-star.svg">
+            <img alt="star" src="images/icon-star.svg">
+            <img alt="star" src="images/icon-star.svg">
             <p>
               Rated 5 Stars in Report Guru
             </p>
@@ -59,11 +59,11 @@
   
           </article>
           <article class="review">
-            <img src="images/icon-star.svg">
-            <img src="images/icon-star.svg">
-            <img src="images/icon-star.svg">
-            <img src="images/icon-star.svg">
-            <img src="images/icon-star.svg">
+            <img alt="star" src="images/icon-star.svg">
+            <img alt="star" src="images/icon-star.svg">
+            <img alt="star" src="images/icon-star.svg">
+            <img alt="star" src="images/icon-star.svg">
+            <img alt="star" src="images/icon-star.svg">
             <p>
               Rated 5 Stars in BestTech
             </p>
