Alt tags for images

--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
         </div>
              
       <div class="testimonials">
-        <article alt="client headshot" class="testimonial">
+        <article class="testimonial">
         
-          <img src="./images/image-colton.jpg">
+          <img alt="client headshot"  src="./images/image-colton.jpg">
           <div class="testimonial-meta">
 
             <h2>
